# PS1_GUI

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.23425b9  CMakeLists.txt.user.36c0f08  CMakeLists.txt.user.467fa48  CMakeLists.txt.user.66383e3  CMakeLists.txt.user.8db48ff  CMakeLists.txt.user.e66d9e4  Makefile  cmake_install.cmake  functionkey.cpp  functionkey.h  functionkey.ui  icon.qrc  logtext.cpp  logtext.h  main.cpp  mainscreen.cpp  mainscreen.h  mainscreen.ui  sizesetting.cpp  sizesetting.h  sizesetting.ui  stage.cpp  stage.h  stage.ui  startpsi.cpp  startpsi.h  startpsi.ui  state_variable.cpp  state_variable.h  stl.qrc  subscreen.cpp  subscreen.h  subscreen.ui  widgetcontrolpanel.cpp  widgetcontrolpanel.h  widgetcontrolpanel.ui  widgetcurrentposition.cpp  widgetcurrentposition.h  (+10 more)
.cmake/api/v1/reply/: cache-v2-555177e214704d9f43b8.json  codemodel-v2-527e4a6f2bc6f03e1f8d.json  index-2022-05-24T05-12-46-0084.json  target-PSI-965dc4c966e88c4da65c.json
.cmake/api/v1/reply.prev/: cmakeFiles-v1-8b12250acfc6367a7a32.json  codemodel-v2-89879a75049bb33659c3.json  index-2022-05-19T01-29-12-0554.json  target-PSI-84bea2489707b0ef0822.json  target-PSI_autogen-128d61c2416fc789ba28.json
PSI.app/Contents/: Info.plist
PSI.app/Contents/MacOS/: PSI  data.txt
PSI_autogen/: moc_predefs.h  mocs_compilation.cpp
PSI_autogen/EWIEGA46WW/: moc_dialog.cpp  moc_dialog.cpp.d  moc_dialog2.cpp  moc_dialog2.cpp.d  moc_dialog3.cpp  moc_dialog3.cpp.d  moc_dialog4.cpp  moc_dialog4.cpp.d  moc_functionkey.cpp  moc_functionkey.cpp.d  moc_mainscreen.cpp  moc_mainscreen.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_resultpages.cpp  moc_resultpages.cpp.d  moc_sizesetting.cpp  moc_sizesetting.cpp.d  moc_stage.cpp  moc_stage.cpp.d  moc_startpsi.cpp  moc_startpsi.cpp.d  moc_subbutton.cpp  moc_subbutton.cpp.d  moc_subscreen.cpp  moc_subscreen.cpp.d  moc_widgetcontrolpanel.cpp  moc_widgetcontrolpanel.cpp.d  moc_widgetcurrentposition.cpp  moc_widgetcurrentposition.cpp.d  moc_widgetdirectchange.cpp  moc_widgetdirectchange.cpp.d  moc_widgetmenupanel.cpp  moc_widgetmenupanel.cpp.d  moc_widgetsection.cpp  moc_widgetsection.cpp.d  qrc_icon.cpp
PSI_autogen/include/: ui_dialog.h  ui_dialog2.h  ui_dialog3.h  ui_dialog4.h  ui_functionkey.h  ui_mainscreen.h  ui_mainwindow.h  ui_resultpages.h  ui_sizesetting.h  ui_stage.h  ui_startpsi.h  ui_subbutton.h  ui_subscreen.h  ui_widgetcontrolpanel.h  ui_widgetcurrentposition.h  ui_widgetdirectchange.h  ui_widgetmenupanel.h  ui_widgetsection.h
STL/: CS.stl  ps 2 CAD modeling.stl  tello modeling.stl
